# cicd-repo-infrastructure

./: .clang-format  .clang-tidy  CMakeLists.txt  CONTRIBUTING.md  README.md  mull.yml  requirements.txt
.github/workflows/: asciidoctor-ghpages.yml  test.yml
ci/.github/workflows/: asciidoctor-ghpages.yml  unit_tests.yml
cmake/: benchmark.cmake  black.cmake  branch_diff.cmake  clang-tidy.cmake  coverage.cmake  cpm_recipes.cmake  dependencies.cmake  diagnostics.cmake  docs.cmake  format.cmake  main.cmake  mull.cmake  mypy.cmake  profile.cmake  quality.cmake  setup.cmake  test.cmake  warnings.cmake
cmake/scripts/: black.cmake
docs/: benchmarking.adoc  dependencies.adoc  github.adoc  index.adoc  intro.adoc  options.adoc  quality.adoc  testing.adoc  toolchains.adoc  warnings.adoc
test/: verify_links.sh
test/application/: CMakeLists.txt  clean.sh
test/application/recipes/: CMakeLists.txt  boost_hana_recipe.cpp  boost_sml_recipe.cpp  fmt_recipe.cpp
test/application/src/: test.cpp
test/application/test/: CMakeLists.txt  catch2_test.cpp  compile_fail_test.cpp  compile_fail_test_no_pattern.cpp  conftest.py  custom_test.cpp  fuzz_test.cpp  gtest_test.cpp  gunit_steps.cpp  gunit_test.cpp  hypothesis_and_cppyy.py  nonrandom_test.cpp  pytest_test.py  snitch_test.cpp  test.feature
